[project]
name = "nonebot-plugin-lingchu-bot"
version = "0.0.0.dev40"
# dynamic = ["version"]
description = "由NoneBot2驱动，面向多平台的管理机器人"
keywords = ["nonebot2", "nonebot", "bot", "cross-platform", "group-management"]
readme = "README.md"
license = "LGPL-3.0-or-later AND (GFDL-1.3-or-later OR CC-BY-SA-4.0) AND (CC0-1.0 OR CC-BY-SA-4.0) AND (MIT OR Apache-2.0)"
license-files = [
    "LICENSE-code",
    "LICENSE-docs",
    "LICENSE-cc0",
    "LICENSE-mit",
    "LICENSE-apache",
    "LICENSE-cc-by-sa",
    "CLA.md",
    "Repository-Policy.md",
]
requires-python = ">=3.13, <4.0"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Plugins",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Natural Language :: Chinese (Simplified)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
]
authors = [{ name = "xinvxueyuan", email = "xinvxueyuan@yeah.net" }]
maintainers = [{ name = "xinvxueyuan", email = "xinvxueyuan@yeah.net" }]
dependencies = [
    "nonebot2[fastapi]>=2.5.0",
    "nonebot2[httpx]>=2.4.4",
    "nonebot2[websockets]>=2.4.4",
    "nonebot-plugin-apscheduler>=0.5.0",
    "nonebot-plugin-localstore>=0.7.4",
    "nonebot-plugin-orm[aiosqlite]>=0.8.3",
    "nonebot-plugin-alconna>=0.62.0",
    "nonebot-adapter-onebot>=2.4.6",
    "aiofiles>=25.1.0",
    "babel>=2.18.0",
    "rtoml>=0.13.0",
    "packaging>=24.2",
    "jsonschema>=4.23.0",
]

[project.optional-dependencies]
ai = [
    "openai>=2.38.0",
    "litellm>=1.83.3",
]
novelai = [
    "argon2-cffi>=25.1.0",
    "msgpack>=1.1.1",
    "nonebot-plugin-lingchu-bot[ai]",
]
webui = [
    "nonebot-plugin-htmlkit>=0.1.0rc5",
    "jinja2>=3.1.6",
]
docs = [
    "nonebot-plugin-docs>=2.5.0",
]

[project.urls]
Homepage = "https://lingchu.zone.id/"
Documentation = "https://lingchu.zone.id/"
Repository = "https://github.com/xinvxueyuan/lingchu-bot"
Issues = "https://github.com/xinvxueyuan/lingchu-bot/issues"

[dependency-groups]
dev = [
    { include-group = "script" },
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "git" },
]
script = ["poethepoet>=0.44.0"]
git = [
    # "bump-my-version>=1.3.0",
    "prek>=0.4.4",
]
lint = ["ruff>=0.15.21", "pyright>=1.1.410", "ty>=0.0.58"]
test = [
    "argon2-cffi>=25.1.0",
    "nb-cli>=1.4.0",
    "nonebug>=0.4.3",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "pytest-check>=2.8.0",
    "pytest-clarity>=1.0.1",
    "pytest-cov>=7.1.0",
    "pytest-fastapi>=0.1.0",
    "pytest-httpx>=0.36.2",
    "pytest-icdiff>=0.9",
    "pytest-instafail>=0.5.0",
    "pytest-json>=0.4.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "pytest-socket>=0.7.0",
    "pytest-sqlalchemy>=0.3.0",
    "pytest-sugar>=1.1.1",
    "pytest-timeout>=2.4.0",
    "respx>=0.23.1",
    # Multi-database testing drivers (SQLALCHEMY_DATABASE_URL).
    # cryptography is required by pymysql/aiomysql for MySQL 8 caching_sha2_password
    # auth and by oracledb for TLS.
    "psycopg[binary]>=3.2.4", # PostgreSQL
    "aiomysql>=0.2.0",        # MySQL and MariaDB (SQLAlchemy auto-detects dialect)
    "cryptography>=43.0.0",   # pymysql/aiomysql/oracledb auth
    "oracledb>=2.0.0",        # Oracle Thin mode (no Oracle Client required)
    "aioodbc>=0.5.0",         # SQL Server async ODBC
    # aioodbc depends on pyodbc, which needs system ODBC drivers:
    # - Linux: msodbcsql18 (apt; CI installs via ACCEPT_EULA=Y)
    # - macOS: msodbcsql18 (brew)
    # - Windows: built-in (no extra install)
]


# [tool.poe.tasks]

[tool.nonebot]
plugin_dirs = ["src/plugins"]

[tool.nonebot.adapters]
nonebot-adapter-onebot = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]
"@local" = []

[tool.nonebot.plugins]
nonebot-plugin-apscheduler = ["nonebot_plugin_apscheduler"]
nonebot-plugin-localstore = ["nonebot_plugin_localstore"]
nonebot-plugin-orm = ["nonebot_plugin_orm"]
nonebot-plugin-alconna = ["nonebot_plugin_alconna"]
"@local" = []

[tool.ruff]
line-length = 88
target-version = "py313"
# skills 排除列表同步至 prek.toml
extend-exclude = ["skills", ".agents/skills", ".claude/skills", ".trae/skills"]

[tool.ruff.format]
line-ending = "lf"
preview = true

[tool.ruff.lint]
# For more rules, see https://docs.astral.sh/ruff/rules/.
preview = true
explicit-preview-rules = true
future-annotations = true
task-tags = ["TODO", "FIXME", "XXX", "HACK", "BUG", "NOTE"]
select = [
    "F",     # Pyflakes
    "W",     # pycodestyle warnings
    "E",     # pycodestyle errors
    "I",     # isort
    "C90",   # mccabe
    "N",     # pep8-naming
    "PL",    # pylint
    "UP",    # pyupgrade
    "YTT",   # flake8-2020
    "ANN",   # flake8-annotations
    "ASYNC", # flake8-async
    "BLE",   # flake8-blind-except
    "FBT",   # flake8-boolean-trap
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "COM",   # flake8-commas
    "C4",    # flake8-comprehensions
    "D",     # pydocstyle
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "ICN",   # flake8-import-conventions
    "PIE",   # flake8-pie
    "T20",   # flake8-print
    "PYI",   # flake8-pyi
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "SLOT",  # flake8-slots
    "TID",   # flake8-tidy-imports
    "TC",    # flake8-type-checking
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    # "ERA",   # eradicate
    "FAST", # FastAPI
    "PERF", # Perflint
    "PGH",  # pygrep-hooks
    "FURB", # refurb
    "TRY",  # tryceratops
    "RUF",  # Ruff-specific rules
]
ignore = [
    "B008",  # function-call-in-default-argument  # nonebot2 Depends() without Annotated violates this
    # UP037 (quoted-annotation) removed: with future-annotations = true, quoted
    # annotations are unnecessary and UP037 auto-fixes them by unquoting.
    # "RUF001",  # ambiguous-unicode-character-string
    # "RUF002",  # ambiguous-unicode-character-docstring
    # "RUF003",  # ambiguous-unicode-character-comment
    # "ANN201",  # missing-return-type-undocumented-public-function
    "ANN202",  # missing-return-type-private-function
    "ANN401",  # any-type
    "COM812",  # missing-trailing-comma
    "PLC0415", # import-outside-top-level
    "TID252",  # prefer-absolute-imports
    # pydocstyle (D) ignores
    "D100",  # missing-module-docstring (modules don't need docstrings)
    "D104",  # missing-public-class-docstring (packages don't need docstrings)
    "D105",  # missing-magic-method-docstring (magic methods don't need docstrings)
    "D107",  # missing-__init__-docstring (__init__ doesn't need docstrings)
    "D203",  # one-blank-line-before-class (conflicts with Google convention)
    "D212",  # multi-line-summary-first-line (conflicts with D213, we want D213)
    "D400",  # ends-in-period (too strict for CJK content)
    "D415",  # ends-in-punctuation (too strict for CJK content)
    # missing-docstring rules: too many existing public symbols lack docstrings
    # to retrofit at once. D rules still enforce style on EXISTING docstrings.
    "D101",  # missing-public-class-docstring
    "D102",  # missing-public-method-docstring
    "D103",  # missing-public-function-docstring
]
allowed-confusables = [
    "，",
    "。",
    "“",
    "”",
    "：",
    "；",
    "？",
    "！",
    "【",
    "】",
    "《",
    "》",
    "…",
    "—",
    "（",
    "）",
    "、",
]

[tool.ruff.lint.per-file-ignores]
# pytest fixtures may not be used directly in test functions but are still required for setup
"tests/**" = [
    "ARG002",  # unused-argument
    "ANN201",  # missing-return-type-undocumented-public-function (tests don't need explicit return types)
    "PLR2004", # magic-value-comparison (tests often use magic values for assertions)
    "E501",    # line-too-long (test assertions can be verbose)
    "F841",    # unused-variable (fixtures may assign variables for clarity)
    "TC002",   # typing-only-third-party-import (e.g. pytest used as @pytest.mark decorator)
    "TC003",   # typing-only-standard-library-import (tests don't need TYPE_CHECKING optimization)
    "TC005",   # empty-type-checking-block (test files may have empty TYPE_CHECKING blocks)
    # pydocstyle (D) ignores for tests
    "D100",  # missing-module-docstring
    "D101",  # missing-public-class-docstring
    "D102",  # missing-public-method-docstring
    "D103",  # missing-public-function-docstring
]
# utility scripts use print for diagnostic output
"scripts/**" = [
    "T201",    # print-found
    "C901",    # function-is-too-complex
    "PLR0915", # too-many-statements
    "BLE001",  # blind-exception
    "E501",    # line-too-long
    "F541",    # f-string-without-placeholders
    "TRY003",  # raise-vanilla-args: CI scripts use SystemExit with inline messages
]
# handle handlers may have complex logic with many return paths and NoneBot-mandated parameters
# E402: nonebot2 require() must precede cross-plugin imports at module level
"src/plugins/nonebot_plugin_lingchu_bot/handle/**/adapters/onebot11/default/**.py" = [
    "E402",     # module-import-not-at-top-of-file (nonebot2 require() pattern)
    "PLR0911",  # too-many-return-statements (complex permission and privilege checks)
    "PLR0913",  # too-many-arguments (NoneBot handler + OneBot API signatures)
    "TC001",    # typing-only-first-party-import (NoneBot evaluates type hints at runtime)
    "TC002",    # typing-only-third-party-import (Bot/Event imports needed by get_type_hints())
]
# schemas.py embeds JSON Schema strings with intentionally long lines for editor readability
# E402: nonebot2 require() must precede cross-plugin imports at module level
"src/plugins/nonebot_plugin_lingchu_bot/core/schemas.py" = [
    "E402",  # module-import-not-at-top-of-file (nonebot2 require() pattern)
    "E501",  # line-too-long: embedded JSON Schema strings intentionally use long lines
]

# TC001/TC002/TC003: NoneBot evaluates forward references at hook registration time;
# these runtime imports must not be hidden behind TYPE_CHECKING.
# Additionally, with future-annotations = true in ruff config, TC rules suggest moving
# type-only imports to TYPE_CHECKING, but most files lack `from __future__ import annotations`,
# making such fixes unsafe (would break runtime). NoneBot's get_type_hints() also cannot
# resolve TYPE_CHECKING-only imports during handler/matcher registration.
# E402: nonebot2 require() must precede cross-plugin imports at module level
"src/plugins/nonebot_plugin_lingchu_bot/hooks/handlers/message_store.py" = ["TC002"]
"src/plugins/nonebot_plugin_lingchu_bot/hooks/handlers/bot_connection.py" = ["TC002"]
"src/plugins/nonebot_plugin_lingchu_bot/database/models/scheduler.py" = ["TC003", "E402"]
"src/plugins/nonebot_plugin_lingchu_bot/database/models/subject_policy.py" = ["TC003", "E402"]
"src/plugins/nonebot_plugin_lingchu_bot/database/models/blocklist.py" = ["TC003", "E402"]
"src/plugins/nonebot_plugin_lingchu_bot/database/models/registry.py" = ["TC003", "E402"]
"src/plugins/nonebot_plugin_lingchu_bot/database/models/identity.py" = ["TC003", "E402"]
# TC003: stdlib imports (Coroutine, Path, Callable) used at runtime or in annotations
# evaluated by NoneBot; files lack `from __future__ import annotations`.
"src/plugins/nonebot_plugin_lingchu_bot/core/async_utils.py" = ["TC003"]
"src/plugins/nonebot_plugin_lingchu_bot/handle/qq/adapters/__init__.py" = ["TC003"]
# TC002: third-party imports (Plugin, Matcher) needed at runtime for NoneBot registration.
"src/plugins/nonebot_plugin_lingchu_bot/core/subplugins/loader.py" = ["TC002"]
# TC001: first-party imports (NovelAIGenerationPlan) used at runtime in payload construction.
"src/plugins/nonebot_plugin_lingchu_bot/core/subplugins/novelai_image/payload.py" = ["TC001"]

# ARG001: NoneBot handler signatures require bot/event params even when unused
"src/plugins/nonebot_plugin_lingchu_bot/handle/qq/adapters/onebot11/napcat/announcement.py" = ["ARG001"]
"src/plugins/nonebot_plugin_lingchu_bot/handle/qq/adapters/onebot11/default/bot_state.py" = ["ARG001"]
# TC001/TC002/TC003: NoneBot evaluates type hints at runtime via get_type_hints();
# Bot/Event/Path imports must remain at module level for handler registration.
"src/plugins/nonebot_plugin_lingchu_bot/handle/qq/adapters/onebot11/napcat/**.py" = ["TC001", "TC002", "TC003"]

# TRY003/TRY004: vanilla exceptions (ValueError/TypeError) are intentional for validation
# E402: nonebot2 require() must precede cross-plugin imports at module level
"src/plugins/nonebot_plugin_lingchu_bot/core/menu_config.py" = ["TRY003", "E402"]
"src/plugins/nonebot_plugin_lingchu_bot/core/handle_config_manager.py" = ["TRY003", "BLE001", "E402"]
"src/plugins/nonebot_plugin_lingchu_bot/core/handle_config_defaults/__init__.py" = ["TRY003", "E402"]
"src/plugins/nonebot_plugin_lingchu_bot/core/subplugins/novelai_image/models.py" = [
    "TRY003",  # request value objects report field-specific validation messages
    "PLR2004", # NovelAI protocol limits are clearest beside their validation
    "C901",    # complete generation validation intentionally stays centralized
    "PLR0912", # complete generation validation covers independent feature families
    "PLR0915", # complete generation validation keeps coupled protocol invariants together
]
"src/plugins/nonebot_plugin_lingchu_bot/core/subplugins/novelai_image/tipo.py" = ["TRY003"]
"src/plugins/nonebot_plugin_lingchu_bot/core/subplugins/novelai_image/intent.py" = ["TRY003"]
"src/plugins/nonebot_plugin_lingchu_bot/core/subplugins/novelai_image/client.py" = [
    "TRY003",  # domain failures carry endpoint-specific diagnostics
    "PLR0911", # compatibility event classification has explicit terminal shapes
    "PLR0913", # Director tools have a fixed public protocol parameter surface
    "TC003",   # AsyncIterator/Mapping annotations document the public client API
]
"src/plugins/nonebot_plugin_lingchu_bot/core/subplugins/novelai_image/auth.py" = [
    "TRY003", # credential validation needs actionable operator diagnostics
]
"src/plugins/nonebot_plugin_lingchu_bot/core/subplugins/novelai_image/imaging.py" = [
    "TRY003",  # malformed image diagnostics identify the rejected format
    "PLR2004", # PNG/JPEG marker sizes are wire-format constants
]
"src/plugins/nonebot_plugin_lingchu_bot/core/subplugins/novelai_image/response.py" = [
    "TRY003",  # response exceptions preserve bounded provider diagnostics
    "PLR2004", # HTTP statuses and frame prefix sizes are protocol constants
]
"src/plugins/nonebot_plugin_lingchu_bot/core/subplugins/novelai_image/service.py" = [
    "TRY003", # missing credentials need an actionable configuration diagnostic
]
"src/plugins/nonebot_plugin_lingchu_bot/core/subplugins/novelai_image/handler.py" = [
    "E402",    # nonebot require() must run before optional plugin imports
    "TRY003",  # command validation errors are mapped to localized user output
    "TRY004",  # external segment objects with invalid payloads are value errors
    "TRY301",  # one action boundary maps all domain validation failures uniformly
    "PLR2004", # HTTP status boundary is kept next to image download handling
    "PLR0913", # generation action request mirrors the protocol's coupled settings
    "C901",    # action dispatcher keeps one permission-gated matcher entry point
    "PLR0912", # each explicit NovelAI action is one command branch
    "PLR0915", # action dispatcher performs validation, invocation, and localized output
]
"src/plugins/nonebot_plugin_lingchu_bot/database/orm_crud/_base.py" = ["TRY003", "E402"]
"src/plugins/nonebot_plugin_lingchu_bot/database/toml_store/_helpers.py" = ["TRY003"]

# BLE001: startup/probe code uses intentional fail-closed/fail-soft exception handling
# E402: nonebot2 require() must precede cross-plugin imports at module level
"src/plugins/nonebot_plugin_lingchu_bot/core/bot_state.py" = ["BLE001", "E402", "TC003"]
"src/plugins/nonebot_plugin_lingchu_bot/core/subplugins/novelai_image/search.py" = ["BLE001"]
"src/plugins/nonebot_plugin_lingchu_bot/services/llm.py" = ["BLE001"]
"src/plugins/nonebot_plugin_lingchu_bot/services/protocol_restart_feedback.py" = ["BLE001"]
"src/plugins/nonebot_plugin_lingchu_bot/start/startup.py" = ["BLE001"]
"src/plugins/nonebot_plugin_lingchu_bot/platforms/qq/permissions.py" = ["BLE001"]
"src/plugins/nonebot_plugin_lingchu_bot/database/toml_store/_async_db.py" = ["TRY003", "BLE001"]

# PLW0603: module-level state management is an established pattern in this codebase
# E402: nonebot2 require() must precede cross-plugin imports at module level
"src/plugins/nonebot_plugin_lingchu_bot/handle/menu.py" = ["PLW0603", "E402"]

# C901/PLR0911: complex functions that are difficult to split without losing readability
"src/plugins/nonebot_plugin_lingchu_bot/hooks/adapters.py" = ["C901", "PLR0911"]

# PLR0913: parameter-heavy write/audit and CRUD APIs (request object refactoring is a follow-up task)
"src/plugins/nonebot_plugin_lingchu_bot/repositories/blocklist.py" = ["PLR0913"]
"src/plugins/nonebot_plugin_lingchu_bot/repositories/message_store.py" = ["PLR0913"]
"src/plugins/nonebot_plugin_lingchu_bot/permissions/subject_policy.py" = ["PLR0913"]

# Combined entries for files needing multiple rule suppressions
# E402: nonebot2 require() must precede cross-plugin imports at module level
"src/plugins/nonebot_plugin_lingchu_bot/core/runtime_config.py" = [
    "E402",     # module-import-not-at-top-of-file (nonebot2 require() pattern)
    "TRY003",  # vanilla exceptions for config validation
    "TRY004",  # TypeError for invalid config types
    "PLW0603",  # module-level state management
    "C901",  # complex validation logic
]
"src/plugins/nonebot_plugin_lingchu_bot/repositories/scheduler_jobs.py" = [
    "PLR0913",  # parameter-heavy job spec API
    "TRY003",  # vanilla exceptions for validation
    "TRY004",  # TypeError for invalid types
]
"src/plugins/nonebot_plugin_lingchu_bot/repositories/permissions.py" = [
    "TC001",  # runtime type imports needed by NoneBot
    "TC003",  # runtime stdlib imports needed by NoneBot
    "PLR0913",  # parameter-heavy identity group API
]
"src/plugins/nonebot_plugin_lingchu_bot/services/scheduler.py" = [
    "E402",     # module-import-not-at-top-of-file (nonebot2 require() pattern)
    "PLR0913",  # parameter-heavy scheduler API
    "TRY003",  # vanilla exceptions for validation
]
"src/plugins/nonebot_plugin_lingchu_bot/database/orm_crud/_bulk.py" = [
    "E402",     # module-import-not-at-top-of-file (nonebot2 require() pattern)
    "TC003",  # runtime stdlib imports needed by NoneBot
    "TRY003",  # vanilla exceptions for CRUD validation
    "PLR0913",  # parameter-heavy generic CRUD functions
]
"src/plugins/nonebot_plugin_lingchu_bot/database/orm_crud/_single.py" = [
    "E402",     # module-import-not-at-top-of-file (nonebot2 require() pattern)
    "TRY003",  # vanilla exceptions for CRUD validation
    "TC003",  # runtime stdlib imports needed by NoneBot
]
"src/plugins/nonebot_plugin_lingchu_bot/permissions/bootstrap.py" = [
    "TC003",  # runtime stdlib imports needed by NoneBot
    "TRY003",  # vanilla exceptions for validation
]
"src/plugins/nonebot_plugin_lingchu_bot/permissions/admin.py" = [
    "TC001",  # runtime first-party imports needed by NoneBot
    "TRY003",  # vanilla exceptions for validation
]

# E402: nonebot2 require() must precede cross-plugin imports at module level.
# Preferred fix is function-level require() (per AGENTS.md) as a follow-up refactor.
"src/plugins/nonebot_plugin_lingchu_bot/core/config.py" = ["E402", "TC003"]
"src/plugins/nonebot_plugin_lingchu_bot/core/subplugins/contracts.py" = ["E402"]
"src/plugins/nonebot_plugin_lingchu_bot/core/subplugins/llm_chat/config.py" = ["E402"]
"src/plugins/nonebot_plugin_lingchu_bot/core/subplugins/llm_chat/handler.py" = ["E402"]
"src/plugins/nonebot_plugin_lingchu_bot/core/subplugins/llm_chat/__init__.py" = ["E402"]
"src/plugins/nonebot_plugin_lingchu_bot/core/subplugins/novelai_image/config.py" = ["E402"]
"src/plugins/nonebot_plugin_lingchu_bot/core/subplugins/novelai_image/__init__.py" = ["E402"]
"src/plugins/nonebot_plugin_lingchu_bot/database/models/message.py" = ["E402"]
"src/plugins/nonebot_plugin_lingchu_bot/handle/qq/commands/announcement.py" = ["E402"]
"src/plugins/nonebot_plugin_lingchu_bot/handle/qq/commands/block.py" = ["E402", "TC002"]
"src/plugins/nonebot_plugin_lingchu_bot/handle/qq/commands/bot_state.py" = ["E402", "TC002"]
"src/plugins/nonebot_plugin_lingchu_bot/handle/qq/commands/common.py" = ["E402"]
"src/plugins/nonebot_plugin_lingchu_bot/handle/qq/commands/kick.py" = ["E402"]
"src/plugins/nonebot_plugin_lingchu_bot/handle/qq/commands/lifecycle.py" = ["E402", "TC002"]
"src/plugins/nonebot_plugin_lingchu_bot/handle/qq/commands/member.py" = ["E402"]
"src/plugins/nonebot_plugin_lingchu_bot/handle/qq/commands/mute.py" = ["E402", "TC002"]
"src/plugins/nonebot_plugin_lingchu_bot/handle/qq/commands/profile.py" = ["E402"]
"src/plugins/nonebot_plugin_lingchu_bot/handle/qq/commands/protect.py" = ["E402"]
"src/plugins/nonebot_plugin_lingchu_bot/handle/qq/commands/remote.py" = ["E402"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"

[tool.ruff.lint.isort]
known-first-party = ["nonebot_plugin_lingchu_bot"]
force-sort-within-sections = true
combine-as-imports = true

[tool.pyright]
# For Pylance/Pyright configurations, see https://microsoft.github.io/pyright/#/configuration.
pythonVersion = "3.13"
pythonPlatform = "All"
typeCheckingMode = "strict"
# Spec-mandated explicit report rules (error-level).
reportMissingParameterType = "error"
reportUnnecessaryTypeConstraint = "error"
reportImplicitOverride = "error"
# Spec-mandated explicit report rules (warning-level).
reportShadowedImports = "warning"
reportImplicitStringConcatenation = "warning"
reportImportCycles = "warning"
# Framework-related unknown-type rules relaxed to warning.
# NoneBot2 and nonebot-plugin-alconna lack complete type stubs; their
# finish(), on_alconna(), get() etc. emit "partially unknown" types that
# are false positives, not real type safety issues.
reportUnknownVariableType = "warning"
reportUnknownMemberType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownLambdaType = "warning"
reportUnknownParameterType = "warning"
reportMissingTypeArgument = "warning"
reportMissingTypeStubs = "none"
# NoneBot plugin architecture uses cross-module private function access and
# decorator-based registration; reportUnusedFunction reports false positives.
reportUnusedFunction = "none"
# Accessing framework internals (e.g. NoneBot private APIs) is intentional.
reportPrivateUsage = "warning"
# Module-level state management is an established pattern (menu.py etc.);
# PLW0603 is already suppressed in ruff per-file-ignores for the same files.
reportConstantRedefinition = "warning"
# Deprecated function usage flagged by typeshed; fix when actionable.
reportDeprecated = "warning"
# Defensive runtime isinstance checks on typed parameters are intentional;
# type annotations cannot guarantee runtime types (e.g. user-supplied config).
reportUnnecessaryIsInstance = "warning"
include = ["src", "tests"]
# skills 排除列表同步至 prek.toml
exclude = [
    "skills",
    ".agents/skills",
    ".claude/skills",
    ".trae/skills",
    "apps",
    "packages",
    "docker",
    ".venv",
    "node_modules",
    ".cache",
    "__pycache__",
    ".mypy_cache",
    ".ruff_cache",
    ".pyright",
    "tmp",
]

[tool.ty]
# ty is pre-1.0 (0.0.x); it checks all rules by default and exits non-zero on
# any warning or error diagnostic. There is no global "strict" toggle — the
# default behavior is already strict. Per-rule severity can be tuned in
# [tool.ty.rules] and per-file overrides via [[tool.ty.overrides]].

[tool.ty.src]
# skills 排除列表同步至 prek.toml
exclude = [
    "skills/",
    ".agents/skills/",
    ".claude/skills/",
    ".trae/skills/",
    "apps/",
    "packages/",
    "docker/",
    # `tests/` lives outside the runtime src tree and is checked by the
    # matrix `tests` job (with the test dependency group installed).
    # Excluding it here keeps `task ci:fix` (ty check --fix) green in the
    # lint-only environment, which deliberately skips the test group to
    # avoid building system-level database drivers (mariadb, aioodbc).
    "tests/",
]

# ty cannot infer that asyncio.to_thread(deepcopy, value) preserves the outer
# generic TypeVar T through deepcopy's own _T scope (ty 0.0.x limitation with
# higher-order generic functions). Remove this override once the code is
# restructured (e.g. with typing.cast) or ty improves generic inference.
[[tool.ty.overrides]]
include = ["src/plugins/nonebot_plugin_lingchu_bot/database/toml_store/_helpers.py"]

[tool.ty.overrides.rules]
invalid-return-type = "ignore"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
pythonpath = [".", "src"]
testpaths = ["tests"]
addopts = "--import-mode=importlib --strict-markers --strict-config --cov=src/plugins/nonebot_plugin_lingchu_bot --cov-branch --cov-report=term-missing --cov-report=xml:test-results/coverage.xml --cov-report=html:htmlcov --cov-fail-under=86"
timeout = 300
timeout_method = "thread"
filterwarnings = [
    "ignore:No path_separator found in configuration:DeprecationWarning:alembic.config",
    "ignore:The version_path_separator configuration parameter is deprecated:DeprecationWarning:alembic.config",
]

[tool.coverage.run]
source = ["src/plugins/nonebot_plugin_lingchu_bot"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

# TODO: add build system configuration
[build-system]
requires = ["uv_build>=0.11.8,<0.12"]
build-backend = "uv_build"


[tool.uv.build-backend]
module-name = "nonebot_plugin_lingchu_bot"
module-root = "src/plugins"
# version = { source = "git" }

# [project.scripts]
# TODO: add command line entry point
# lcbot = ""
